--- a/proyecto-grupal02/src/App.css
+++ b/proyecto-grupal02/src/App.css
@@ -1,4 +1,24 @@
+body{
+  background: url(../public/fondo.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
-.cardPost{
-  width: 18rem;
+.card{
+  width: 25rem;
+}
+
+.botones{
+  display: flex;
+  gap: 10px;
+}
+
+.row{
+  gap: 20px;
+}
+
+.card-img-top{
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
 }
